tests/ui/rfcs/rfc-2632-const-trait-impl/gate.stderr
error[E0658]: const closures are experimental
  --> $DIR/gate.rs:4:6
   |
LL |     (const || {})();
   |      ^^^^^
   |
   = note: see issue #106003 <https://github.com/rust-lang/rust/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const closures are experimental
  --> $DIR/gate.rs:12:5
   |
LL | e!((const || {}));
   |     ^^^^^
   |
   = note: see issue #106003 <https://github.com/rust-lang/rust/issues/106003> for more information
   = help: add `#![feature(const_closures)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
